Fix broken/wrong/missing background for muted and turned off account badges in multiaccount sidebar (#3691)
* Fix broken styles for muted and turned off account badges in multiaccount sidebar

* add changlog number

--- a/src/renderer/components/AccountListSidebar/styles.module.scss
+++ b/src/renderer/components/AccountListSidebar/styles.module.scss
@@ -196,12 +196,12 @@
   padding: 0 4pt;
   text-align: center;
 
-  .bgSyncDisabled {
+  &.bgSyncDisabled {
     background-color: grey;
     padding: 0 3pt;
   }
 
-  .muted {
+  &.muted {
     background-color: grey;
   }
 }
